--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -38,7 +38,8 @@
     "symfony/runtime": "^5.4",
     "symfony/security-bundle": "^5.4",
     "symfony/twig-bundle": "^5.4",
-    "symfony/web-link": "^5.4"
+    "symfony/web-link": "^5.4",
+    "symfony/var-exporter": "^5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
