--- a/elasticms-web/config/packages/ems_common.yaml
+++ b/elasticms-web/config/packages/ems_common.yaml
@@ -13,7 +13,7 @@ parameters:
     env(EMS_ELASTICSEARCH_HOSTS): '%env(string:EMSCH_ELASTICSEARCH_CLUSTER)%'
     env(EMS_BACKEND_URL): ~
     env(EMS_BACKEND_API_KEY): ~
-    env(EMS_BACKEND_API_INSECURE): false
+    env(EMS_BACKEND_API_VERIFY): false
 
     env(EMS_CACHE): 'file_system'
     env(EMS_CACHE_PREFIX): ~
@@ -33,7 +33,7 @@ ems_common:
     storages: '%env(json:EMS_STORAGES)%'
     backend_url: '%env(string:EMS_BACKEND_URL)%'
     backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
-    backend_api_insecure: '%env(string:EMS_BACKEND_API_INSECURE)%'
+    backend_api_verify: '%env(string:EMS_BACKEND_API_VERIFY)%'
     webalize:
         removable_regex: '%env(string:EMS_WEBALIZE_REMOVABLE_REGEX)%'
         dashable_regex: '%env(string:EMS_WEBALIZE_DASHABLE_REGEX)%'
