--- a/elasticms-cli/config/packages/ems_common.yaml
+++ b/elasticms-cli/config/packages/ems_common.yaml
@@ -6,7 +6,7 @@ parameters:
   env(EMS_ELASTICSEARCH_HOSTS): '["http://localhost:9200"]'
   env(EMS_BACKEND_URL): ~
   env(EMS_BACKEND_API_KEY): ~
-  env(EMS_BACKEND_API_VERIFY): false
+  env(EMS_BACKEND_API_VERIFY): true
 
   env(EMS_CACHE): 'file_system'
   env(EMS_CACHE_PREFIX): 'emscli_'
