--- a/elasticms-web/config/packages/ems_common.yaml
+++ b/elasticms-web/config/packages/ems_common.yaml
@@ -13,7 +13,7 @@ parameters:
     env(EMS_ELASTICSEARCH_HOSTS): '%env(string:EMSCH_ELASTICSEARCH_CLUSTER)%'
     env(EMS_BACKEND_URL): ~
     env(EMS_BACKEND_API_KEY): ~
-    env(EMS_BACKEND_API_VERIFY): false
+    env(EMS_BACKEND_API_VERIFY): true
 
     env(EMS_CACHE): 'file_system'
     env(EMS_CACHE_PREFIX): ~
