fix(common/api): EMS_BACKEND_API_VERIFY (#351)

--- a/elasticms-admin/config/packages/ems_common.yaml
+++ b/elasticms-admin/config/packages/ems_common.yaml
@@ -21,6 +21,7 @@ parameters:
     env(EMS_LOG_LEVEL): '250'
     env(EMS_BACKEND_URL): ~
     env(EMS_BACKEND_API_KEY): ~
+    env(EMS_BACKEND_API_VERIFY): true
 
     env(EMS_CACHE): 'file_system'
     env(EMS_CACHE_PREFIX): ~
@@ -40,6 +41,7 @@ ems_common:
     log_level: '%env(int:EMS_LOG_LEVEL)%'
     backend_url: '%env(string:EMS_BACKEND_URL)%'
     backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
+    backend_api_verify: '%env(string:EMS_BACKEND_API_VERIFY)%'
     webalize:
         removable_regex: '%env(string:EMS_WEBALIZE_REMOVABLE_REGEX)%'
         dashable_regex: '%env(string:EMS_WEBALIZE_DASHABLE_REGEX)%'
