--- a/elasticms-cli/config/packages/ems_common.yaml
+++ b/elasticms-cli/config/packages/ems_common.yaml
@@ -6,6 +6,7 @@ parameters:
   env(EMS_ELASTICSEARCH_HOSTS): '["http://localhost:9200"]'
   env(EMS_BACKEND_URL): ~
   env(EMS_BACKEND_API_KEY): ~
+  env(EMS_BACKEND_API_VERIFY): true
 
   env(EMS_CACHE): 'file_system'
   env(EMS_CACHE_PREFIX): 'emscli_'
@@ -20,6 +21,7 @@ ems_common:
   storages: '%env(json:EMS_STORAGES)%'
   backend_url: '%env(string:EMS_BACKEND_URL)%'
   backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
+  backend_api_verify: '%env(string:EMS_BACKEND_API_VERIFY)%'
   cache:
     type: '%env(EMS_CACHE)%'
     prefix: '%env(string:EMS_CACHE_PREFIX)%'
