fix: EMS_BACKEND_API_VERIFY (bool)

--- a/elasticms-cli/config/packages/ems_common.yaml
+++ b/elasticms-cli/config/packages/ems_common.yaml
@@ -21,7 +21,7 @@ ems_common:
   storages: '%env(json:EMS_STORAGES)%'
   backend_url: '%env(string:EMS_BACKEND_URL)%'
   backend_api_key: '%env(string:EMS_BACKEND_API_KEY)%'
-  backend_api_verify: '%env(string:EMS_BACKEND_API_VERIFY)%'
+  backend_api_verify: '%env(bool:EMS_BACKEND_API_VERIFY)%'
   cache:
     type: '%env(EMS_CACHE)%'
     prefix: '%env(string:EMS_CACHE_PREFIX)%'
