fix: fs is not a valide value

--- a/demo/configs/elasticms-web/preview.env
+++ b/demo/configs/elasticms-web/preview.env
@@ -20,7 +20,7 @@ REDIS_PORT=${REDIS_PORT}
 ###> Common ###
 EMS_BACKEND_URL='${EMS_BACKEND_URL}'
 EMS_STORAGES='[{"type":"s3","credentials":{"version":"2006-03-01","credentials":{"key":"${S3_ACCESS_KEY_ID}","secret":"${S3_SECRET_ACCESS_KEY}"},"region":"${S3_DEFAULT_REGION}","endpoint":"${S3_ENDPOINT_URL}","use_path_style_endpoint":true},"bucket":"${S3_BUCKET_NAME}"}]'
-EMS_CACHE='fs'
+EMS_CACHE='redis'
 EMS_CACHE_PREFIX='${INSTANCE_ID}preview'
 ###> Common ###
 
