define template in admin

--- a/demo/configs/elasticms-web/preview.env
+++ b/demo/configs/elasticms-web/preview.env
@@ -32,6 +32,7 @@ EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
 EMSCH_ENV='preview'
 EMSCH_ENVS='{"preview":{"regex":"/.*/","alias":"${INSTANCE_ID}preview","request":{"_backend":"${EMS_ADMIN_URL}"},"backend":"${EMS_BACKEND_URL}"}}'
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
+EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"name": "name","code": "body"}}'
 ###< EMSCH ###
 
 ###> EMS Form ###
