--- a/demo/skeleton/routes.yaml
+++ b/demo/skeleton/routes.yaml
@@ -60,11 +60,10 @@ emsch_missing_translation:
         requirements: { _locale: en|fr|nl|de }
     query: '{"query":{"bool":{"must":[{"term":{"_contenttype":{"value":"%contentType%"}}},{"term":{"_id":{"value":"%ouuid%"}}}]}},"size":1}'
     template_static: template/base/missing_translation.html.twig
-emsch_homepage:
-    config:
-        path: { en: /, fr: /fr, nl: /nl, de: /de }
-    query: '{"query":{"bool":{"must":[{"term":{"%_locale%.show":true}},{"term":{"%_locale%.slug":"\/"}},{"terms":{"_contenttype":["page"]}}]}},"size":1}'
-    template_static: template/page/by_type.html.twig
+emsch_language_selection:
+  config:
+    path: /
+  template_static: template/view/language_select.html.twig
 form_iframe:
     config:
         path: '/iframe/{ouuid}/{_locale}'
@@ -92,7 +91,8 @@ emsch_word_export:
   template_static: template/page/word-export/document.html.twig
 emsch_path:
     config:
-        path: { en: '/{path}', fr: '/fr/{path}', nl: '/nl/{path}', de: '/de/{path}' }
+        path: { fr: '/fr/{path}', nl: '/nl/{path}' }
         requirements: { path: '^(?!(fr/|nl/|de/|_wdt/|_profiler/|metric|file/)(.*$)?).+' }
-    query: '{"query":{"bool":{"must":[{"nested":{"path":"paths","query":{"term":{"paths.path":"%path%"}}}},{"nested":{"path":"paths","query":{"term":{"paths.locale":"%_locale%"}}}},{"terms":{"_contenttype":["structure"]}}]}},"size":1}'
+        defaults: { path: 'home' }
+    query: '{"query":{"bool":{"must":[{"nested":{"path":"paths","query":{"term":{"paths.path":"%path%"}}}},{"nested":{"path":"paths","query":{"term":{"paths.locale":"%_locale%"}}}},{"terms":{"_contenttype":["section"]}}]}},"size":1}'
     template_static: template/structure/by_path.html.twig
