--- a/demo/package.json
+++ b/demo/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.6.0",
     "jquery-bridget": "^3.0.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "popper.js": "^1.16.1",
     "reveal.js": "^4.2.1",
     "sass": "^1.34.0",
     "sass-loader": "^11.1.1",
@@ -47,10 +48,12 @@
     "swiper": "^6.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.38.0",
-    "webpack-cli": "^4.7.0"
+    "webpack-cli": "^4.7.0",
+    "js-cookie": "^2.2.1"
   },
   "dependencies": {
     "@elasticms/admin-menu": "^1.0.1",
+    "@fontsource/mulish": "^4.5.11",
     "masonry-layout": "^4.2.2"
   }
 }
