--- a/demo/configs/elasticms-web/zz-live.env
+++ b/demo/configs/elasticms-web/zz-live.env
@@ -8,7 +8,7 @@ APACHE_CACHE_CONTROL='immutable, max-age=63072000, public'
 
 ###> Symfony ###
 APP_SECRET='ThisIsSecret'
-DEFAULT_LOCAL='en'
+DEFAULT_LOCAL='nl'
 DATABASE_URL='sqlite:///tmp/demo-live.db'
 ###< Symfony ###
 
@@ -25,7 +25,7 @@ EMS_CACHE_PREFIX='${INSTANCE_ID}live'
 ###> Common ###
 
 ###> EMSCH ###
-EMSCH_LOCALES='["en","fr","nl","de"]'
+EMSCH_LOCALES='["nl","fr"]'
 EMSCH_BIND_LOCALE='false'
 EMSCH_BACKEND_URL='${EMS_BACKEND_URL}'
 EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
