--- a/demo/skeleton/routes.yaml
+++ b/demo/skeleton/routes.yaml
@@ -61,14 +61,14 @@ emsch_missing_translation:
     query: '{"query":{"bool":{"must":[{"term":{"_contenttype":{"value":"%contentType%"}}},{"term":{"_id":{"value":"%ouuid%"}}}]}},"size":1}'
     template_static: template/base/missing_translation.html.twig
 site.webmanifest:
-  config:
-    path: site.webmanifest
-    defaults: { _format: json }
-  template_static: template/head/site.webmanifest.twig
+    config:
+        path: site.webmanifest
+        defaults: { _format: json }
+    template_static: template/head/site.webmanifest.twig
 emsch_language_selection:
-  config:
-    path: /
-  template_static: template/view/language_select.html.twig
+    config:
+        path: /
+    template_static: template/view/language_select.html.twig
 form_iframe:
     config:
         path: '/iframe/{ouuid}/{_locale}'
@@ -89,15 +89,15 @@ form_dynamic_field:
         controller: 'emsf.controller.form::dynamicFieldAjax'
         method: [POST]
 emsch_word_export:
-  config:
-    path: '/_word_export/{contentType}/{ouuid}.docx'
-    requirements: { path: '^(?!(fr/|nl/|de/|_wdt/|_profiler/|file/)(.*$)?).+', _locale: en|fr|nl|de }
-  query: '{"query":{"bool":{"should":[{"bool":{"must":[{"terms":{"_contenttype":["%contentType%"]}},{"term":{"_id":"%ouuid%"}}]}},{"bool":{"must":[{"nested":{"path":"paths","query":{"term":{"paths.target":{"value":"%contentType%:%ouuid%","boost":3}}}}},{"nested":{"path":"paths","query":{"term":{"paths.locale":{"value":"%_locale%"}}}}},{"terms":{"_contenttype":["structure"]}}]}}]}},"size":1}'
-  template_static: template/page/word-export/document.html.twig
+    config:
+        path: '/_word_export/{contentType}/{ouuid}.docx'
+        requirements: { path: '^(?!(fr/|nl/|de/|_wdt/|_profiler/|file/)(.*$)?).+', _locale: en|fr|nl|de }
+    query: '{"query":{"bool":{"should":[{"bool":{"must":[{"terms":{"_contenttype":["%contentType%"]}},{"term":{"_id":"%ouuid%"}}]}},{"bool":{"must":[{"nested":{"path":"paths","query":{"term":{"paths.target":{"value":"%contentType%:%ouuid%","boost":3}}}}},{"nested":{"path":"paths","query":{"term":{"paths.locale":{"value":"%_locale%"}}}}},{"terms":{"_contenttype":["structure"]}}]}}]}},"size":1}'
+    template_static: template/page/word-export/document.html.twig
 emsch_path:
     config:
         path: { fr: '/fr/{path}', nl: '/nl/{path}' }
         requirements: { path: '^(?!(fr/|nl/|de/|_wdt/|_profiler/|metric|file/)(.*$)?).+' }
-        defaults: { path: 'home' }
+        defaults: { path: home }
     query: '{"query":{"bool":{"must":[{"nested":{"path":"paths","query":{"term":{"paths.path":"%path%"}}}},{"nested":{"path":"paths","query":{"term":{"paths.locale":"%_locale%"}}}},{"terms":{"_contenttype":["section"]}}]}},"size":1}'
     template_static: template/structure/by_path.html.twig
