fix: channels were broken

--- a/demo/configs/elasticms-admin/ems-demo.env
+++ b/demo/configs/elasticms-admin/ems-demo.env
@@ -53,6 +53,6 @@ EMSCO_DATEPICKER_DAYSOFWEEK_HIGHLIGHTED='[0,6]'
 
 ###> EMSCH ###
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
-EMSCH_LOCALES='["en","fr","nl","de"]'
+EMSCH_LOCALES='["fr","nl"]'
 EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"name": "name","code": "body"}}'
 ###< EMSCH ###
