feat:  admin debug url

--- a/demo/configs/elasticms-admin/ems-demo-dev.env
+++ b/demo/configs/elasticms-admin/ems-demo-dev.env
@@ -1,12 +1,12 @@
 ###> Apache ###
-SERVER_NAME=local.ems-demo-admin.localhost
-SERVER_ALIASES='local.ems-demo-admin.localhost'
+SERVER_NAME=local.ems-demo-admin-dev.localhost
+SERVER_ALIASES='local.ems-demo-admin-dev.localhost'
 ALIAS='/ems'
 JOBS_ENABLED=true
 ###< Apache ###
 
 ###> Symfony ###
-APP_ENV=redis
+APP_ENV=dev
 APP_NAME=ems-demo-admin
 APP_SECRET='ThisIsSecret'
 TRUSTED_PROXIES=127.0.0.1,REMOTE_ADDR
