--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -23,11 +23,11 @@
     "doctrine/doctrine-bundle": "^2.8",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.6",
-    "elasticms/core-bundle": "^5.0",
-    "elasticms/client-helper-bundle": "^5.0",
-    "elasticms/common-bundle": "^5.0",
-    "elasticms/form-bundle": "^5.0",
-    "elasticms/submission-bundle": "^5.0",
+    "elasticms/core-bundle": "~5.2.0",
+    "elasticms/client-helper-bundle": "~5.2.0",
+    "elasticms/common-bundle": "~5.2.0",
+    "elasticms/form-bundle": "~5.2.0",
+    "elasticms/submission-bundle": "~5.2.0",
     "symfony/console": "^5.4",
     "symfony/dotenv": "^5.4",
     "symfony/flex": "^1.6",
