--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -15,7 +15,7 @@
 	"require" : {
 		"php": "^8.1",
 		"composer/ca-bundle": "^1.1",
-		"elasticms/common-bundle": "^5.0",
+		"elasticms/common-bundle": "~5.3.0",
 		"symfony-cmf/routing": "^2.3",
 		"symfony/asset": "^5.4",
 		"symfony/console": "^5.4",
