--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -10,7 +10,7 @@
         "ext-json": "*",
         "ext-sqlite3": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "elasticms/common-bundle": "^5.0",
+        "elasticms/common-bundle": "~5.3.0",
         "kevinrob/guzzle-cache-middleware": "^4.0",
         "symfony/console": "^5.4",
         "symfony/css-selector": "^5.4",
