fix: emsf configs in admin

--- a/elasticms-admin/config/packages/ems_form.yaml
+++ b/elasticms-admin/config/packages/ems_form.yaml
@@ -4,6 +4,18 @@ parameters:
     env(EMSF_LOAD_FROMJSON): 'true'
     env(EMSF_CACHEABLE): 'true'
     env(EMSF_TYPE): 'form_instance'
+    env(EMSF_FORM_FIELD): 'form'
+    env(EMSF_SUBMISSION_FIELD): 'submissions'
+    env(EMSF_THEME_FIELD): 'theme_template'
+    env(EMSF_FORM_TEMPLATE_FIELD): 'form_template'
+    env(EMSF_FORM_SUBFORM_FIELD): 'sub_form'
+    env(EMSF_TYPE_FORM_CHOICE): 'form_choice'
+    env(EMSF_TYPE_FORM_SUBFORM): 'form_structure'
+    env(EMSF_TYPE_FORM_MARKUP): 'form_structure_markup'
+    env(EMSF_TYPE_FORM_FIELD): 'form_structure_field'
+    env(EMSF_TYPE_FORM_VALIDATION): 'form_validation'
+    env(EMSF_DOMAIN_FIELD): 'domain'
+    env(EMSF_NAME_FIELD): 'name'
 
 ems_form:
     hashcash_difficulty: '%env(int:EMSF_HASHCASH_DIFFICULTY)%'
@@ -12,3 +24,15 @@ ems_form:
         type: '%env(string:EMSF_TYPE)%'
         load_from_json: '%env(bool:EMSF_LOAD_FROMJSON)%'
         cacheable: '%env(bool:EMSF_CACHEABLE)%'
+        form_field: '%env(string:EMSF_FORM_FIELD)%'
+        submission_field: '%env(string:EMSF_SUBMISSION_FIELD)%'
+        theme_field: '%env(string:EMSF_THEME_FIELD)%'
+        form_template_field: '%env(string:EMSF_FORM_TEMPLATE_FIELD)%'
+        form_subform_field: '%env(string:EMSF_FORM_SUBFORM_FIELD)%'
+        type_form_choice: '%env(string:EMSF_TYPE_FORM_CHOICE)%'
+        type_form_subform: '%env(string:EMSF_TYPE_FORM_SUBFORM)%'
+        type_form_markup: '%env(string:EMSF_TYPE_FORM_MARKUP)%'
+        type_form_field: '%env(string:EMSF_TYPE_FORM_FIELD)%'
+        type_form_validation: '%env(string:EMSF_TYPE_FORM_VALIDATION)%'
+        domain: '%env(string:EMSF_DOMAIN_FIELD)%'
+        name: '%env(string:EMSF_NAME_FIELD)%'
