--- a/demo/skeleton/routes.yaml
+++ b/demo/skeleton/routes.yaml
@@ -82,21 +82,21 @@ emsch_language_selection:
 form_iframe:
     config:
         path: '/iframe/{ouuid}/{_locale}'
-        controller: 'emsf.controller.form::iframe'
+        controller: 'EMS\FormBundle\Controller\FormController::iframe'
 form_init:
     config:
         path: '/init-form/{ouuid}/{_locale}'
-        controller: 'emsf.controller.form::initForm'
+        controller: 'EMS\FormBundle\Controller\FormController::initForm'
         method: [POST]
 form_submit:
     config:
         path: '/form/{ouuid}/{_locale}'
-        controller: 'emsf.controller.form::submitForm'
+        controller: 'EMS\FormBundle\Controller\FormController::submitForm'
         method: [POST]
 form_dynamic_field:
     config:
         path: '/ajax/{ouuid}/{_locale}'
-        controller: 'emsf.controller.form::dynamicFieldAjax'
+        controller: 'EMS\FormBundle\Controller\FormController::dynamicFieldAjax'
         method: [POST]
 emsch_word_export:
     config:
