feat: authkey as env

--- a/demo/configs/elasticms-admin/ems-demo-dev.env
+++ b/demo/configs/elasticms-admin/ems-demo-dev.env
@@ -57,3 +57,7 @@ EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 EMSCH_LOCALES='["fr","nl"]'
 EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"name": "name","code": "body"}}'
 ###< EMSCH ###
+
+###> EMS Form ###
+EMSF_AUTHKEY='${EMSF_AUTHKEY}'
+###< EMS Form ###
