--- a/demo/configs/elasticms-web/preview.env
+++ b/demo/configs/elasticms-web/preview.env
@@ -37,5 +37,6 @@ EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"
 
 ###> EMS Form ###
 EMSF_LOAD_FROMJSON=true
+EMSF_AUTHKEY='${EMSF_AUTHKEY}'
 ###< EMS Form ###
 #EOF
