--- a/demo/configs/elasticms-web/zz-live.env
+++ b/demo/configs/elasticms-web/zz-live.env
@@ -36,5 +36,6 @@ EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 
 ###> EMS Form ###
 EMSF_LOAD_FROMJSON=true
+EMSF_AUTHKEY='${EMSF_AUTHKEY}'
 ###< EMS Form ###
 #EOF
