--- a/elasticms-cli/composer.json
+++ b/elasticms-cli/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "elasticms/common-bundle": "~5.3.0",
         "kevinrob/guzzle-cache-middleware": "^4.0",
+        "php-http/httplug": "^2.3",
         "symfony/console": "^5.4",
         "symfony/css-selector": "^5.4",
         "symfony/dotenv": "^5.4",
@@ -19,8 +20,8 @@
         "symfony/framework-bundle": "^5.4",
         "symfony/property-info": "^5.4",
         "symfony/runtime": "^5.4",
-        "symfony/yaml": "^5.4",
-        "symfony/var-exporter": "^5.4"
+        "symfony/var-exporter": "^5.4",
+        "symfony/yaml": "^5.4"
     },
     "require-dev": {
       "phpdocumentor/reflection-docblock": "^5.3",
