--- a/composer.json
+++ b/composer.json
@@ -185,6 +185,7 @@
     "symfony/polyfill-iconv": "*",
     "symfony/polyfill-mbstring": "*",
     "symfony/polyfill-php72": "*",
+    "symfony/polyfill-php73": "*",
     "symfony/polyfill-php80": "*",
     "symfony/polyfill-php81": "*"
   },
