--- a/elasticms-cli/.env
+++ b/elasticms-cli/.env
@@ -39,5 +39,6 @@ EMS_METRIC_ENABLED=false
 EMS_METRIC_HOST=''
 EMS_REDIS_HOST=localhost
 EMS_REDIS_PORT=6379
+#EMS_BACKEND_API_VERIFY=true
 #EMS_HASH_ALGO='sha1'
 ###< EMSCommonBundle ###
