--- a/demo/configs/elasticms-web/zz-live.env
+++ b/demo/configs/elasticms-web/zz-live.env
@@ -1,15 +1,27 @@
 ###> Apache ###
 SERVER_NAME='local.live-ems-demo-web.localhost'
-SERVER_ALIASES='local.live-*-web.localhost local.live-*-web-nocache.localhost'
+SERVER_ALIASES='*'
 ENVIRONMENT_ALIAS='${INSTANCE_ID}live'
 PROTECTED_URL=/protected-baseurl/
 APACHE_CACHE_CONTROL='immutable, max-age=63072000, public'
+APACHE_X_FRAME_OPTIONS=SAMEORIGIN
+APACHE_REFERRER_POLICY='no-referrer-when-downgrade'
+APACHE_CONTENT_SECURITY_POLICY="script-src 'self'"
+#APACHE_ACCESS_CONTROL_ALLOW_ORIGIN='https://elasticms.fgov.be'
+APACHE_PERMISSIONS_POLICY='accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=(), interest-cohort=()'
+APACHE_STRICT_TRANSPORT_SECURITY='max-age=31536000; includeSubDomains'
 ###< Apache ###
 
 ###> Symfony ###
-APP_SECRET='ThisIsSecret'
-DEFAULT_LOCAL='nl'
-DATABASE_URL='sqlite:///tmp/demo-live.db'
+APP_ENV=${APP_ENV}
+APP_SECRET=${APP_SECRET}
+DEFAULT_LOCAL=nl
+TRUSTED_PROXIES='127.0.0.1,REMOTE_ADDR'
+TRUSTED_HOSTS='${TRUSTED_HOSTS}'
+HTTP_CUSTOM_FORWARDED_HOST='${HTTP_CUSTOM_FORWARDED_HOST}'
+HTTP_CUSTOM_FORWARDED_FOR='${HTTP_CUSTOM_FORWARDED_FOR}'
+HTTP_CUSTOM_FORWARDED_PROTO='${HTTP_CUSTOM_FORWARDED_PROTO}'
+HTTP_CUSTOM_FORWARDED_PORT='${HTTP_CUSTOM_FORWARDED_PORT}'
 ###< Symfony ###
 
 ###> Redis ###
@@ -19,9 +31,10 @@ REDIS_PORT=${REDIS_PORT}
 
 ###> Common ###
 EMS_BACKEND_URL='${EMS_BACKEND_URL}'
-EMS_STORAGES='[{"type":"s3","credentials":{"version":"2006-03-01","credentials":{"key":"${S3_ACCESS_KEY_ID}","secret":"${S3_SECRET_ACCESS_KEY}"},"region":"${S3_DEFAULT_REGION}","endpoint":"${S3_ENDPOINT_URL}","use_path_style_endpoint":true},"bucket":"${S3_BUCKET_NAME}"}]'
+EMS_STORAGES='[{"type":"s3","upload-folder":"/tmp/ems-uploads","credentials":{"version":"2006-03-01","credentials":{"key":"${S3_ACCESS_KEY_ID}","secret":"${S3_SECRET_ACCESS_KEY}"},"region":"${S3_DEFAULT_REGION}","endpoint":"${S3_ENDPOINT_URL}","use_path_style_endpoint":true},"bucket":"${S3_BUCKET_NAME}"}]'
 EMS_CACHE='redis'
 EMS_CACHE_PREFIX='${INSTANCE_ID}live'
+EMS_METRIC_ENABLED=true
 ###> Common ###
 
 ###> EMSCH ###
@@ -30,7 +43,7 @@ EMSCH_BIND_LOCALE='false'
 EMSCH_BACKEND_URL='${EMS_BACKEND_URL}'
 EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
 EMSCH_ENV='live'
-EMSCH_ENVS='{"live":{"regex":"/.*/","alias":"${INSTANCE_ID}live","request":{"_backend":"${EMS_ADMIN_URL}"},"backend":"${EMS_BACKEND_URL}"}}'
+EMSCH_ENVS='{"live":{"regex":"/.*/","alias":"${INSTANCE_ID}live"}}'
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 ###< EMSCH ###
 
