fix instance is not ma

--- a/demo/.env
+++ b/demo/.env
@@ -2,7 +2,7 @@
 COMPOSE_PROJECT_NAME=elasticms_demo
 
 EMS_VERSION=5.4
-INSTANCE_ID='ems_promo_v2_ma_'
+INSTANCE_ID='ems_promo_v2_'
 EMS_BACKEND_URL=http://local.ems-demo-admin.localhost:9000
 EMS_ADMIN_URL=http://local.ems-demo-admin.localhost
 
