chore: prd and acc fqdn

--- a/demo/configs/elasticms-web/preview.env
+++ b/demo/configs/elasticms-web/preview.env
@@ -1,6 +1,6 @@
 ###> Apache ###
 SERVER_NAME='local.preview-ems-demo-web.localhost'
-SERVER_ALIASES='local.preview-*-web.localhost local.preview-*-web-nocache.localhost acc.preview-ems-demo-web.localhost'
+SERVER_ALIASES='local.preview-*-web.localhost local.preview-*-web-nocache.localhost *.preview-ems-demo-web.localhost'
 ENVIRONMENT_ALIAS='${INSTANCE_ID}preview'
 PROTECTED_URL=/protected-baseurl/
 APACHE_CACHE_CONTROL='immutable, max-age=63072000, public'
