--- a/demo/docker-elasticms.yml
+++ b/demo/docker-elasticms.yml
@@ -33,7 +33,7 @@ services:
       - TRUSTED_HOSTS=localhost,*.localhost
       - APP_SECRET=ThisIsSecret
     volumes:
-      - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_preview
+      - ./skeleton:/opt/src/local/${INSTANCE_ID}preview
       - ./configs/elasticms-admin:/opt/configs
       - ./configs/admin:/opt/src/admin
       - ./configs/document:/opt/src/document
@@ -74,8 +74,8 @@ services:
       - ./dist:/opt/src/public/skeleton:ro
       - ./configs/admin:/opt/src/admin
       - ./configs/document:/opt/src/document
-      - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_preview
-      - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_live
+      - ./skeleton:/opt/src/local/${INSTANCE_ID}preview
+      - ./skeleton:/opt/src/local/${INSTANCE_ID}live
 #      - ../EMS/client-helper-bundle:/opt/src/vendor/elasticms/client-helper-bundle
 #      - ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
 #      - ../EMS/form-bundle:/opt/src/vendor/elasticms/form-bundle
