--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 *.inc text eol=lf
 *.twig text eol=lf
 *.env text eol=lf
+*.sh text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
