--- a/EMS/common-bundle/composer.json
+++ b/EMS/common-bundle/composer.json
@@ -44,6 +44,7 @@
 		"symfony/monolog-bundle": "^3.8",
 		"symfony/options-resolver": "^5.4",
 		"symfony/process": "^5.4",
+		"symfony/property-access": "^5.4",
 		"symfony/routing": "^5.4",
 		"symfony/security-core": "^5.4",
 		"symfony/serializer": "^5.4",
