feat= lysql migration script

--- a/elasticms-admin/.env.dist
+++ b/elasticms-admin/.env.dist
@@ -68,7 +68,7 @@ EMSCO_FROM_EMAIL_NAME='elasticms'
 #EMS_CIRCLES_OBJECT=''
 #EMSCO_PRE_GENERATED_OUUIDS=false
 #EMSCO_URL_USER=''
-EMSCO_CUSTOM_USER_OPTIONS_FORM='user'
+#EMSCO_CUSTOM_USER_OPTIONS_FORM='user'
 ###< EMSCoreBundle ###
 
 ###> elasticms/form-bundle ###
