feat(sso): poc commit
See README.md in docker\keycloak for launching keycloak
Used bundle -> https://github.com/hslavich/OneloginSamlBundle

The sso logic should go to clientHelperBundle, simple sso authenticator.
We should also persist the user, to a skeleton database.

Helpfull:
- https://itnext.io/symfony-keycloak-sso-saml-262e249d7160
- https://woutercarabain.com/webdevelopment/integrating-keycloak-with-api-platform/

feat(sso): poc commit

See README.md in docker\keycloak for launching keycloak
Used bundle -> https://github.com/hslavich/OneloginSamlBundle

The sso logic should go to clientHelperBundle, simple sso authenticator.
We should also persist the user, to a skeleton database.

Helpfull:
- https://itnext.io/symfony-keycloak-sso-saml-262e249d7160
- https://woutercarabain.com/webdevelopment/integrating-keycloak-with-api-platform/

--- a/elasticms-web/config/routes/framework.yaml
+++ b/elasticms-web/config/routes/framework.yaml
@@ -2,3 +2,6 @@ when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
         prefix: /_error
+
+hslavich_saml_sp:
+    resource: "@HslavichOneloginSamlBundle/Resources/config/routing.yml"
