--- a/elasticms-web/composer.json
+++ b/elasticms-web/composer.json
@@ -24,6 +24,7 @@
     "elasticms/form-bundle": "~5.5.0",
     "elasticms/submission-bundle": "~5.5.0",
     "endroid/qr-code-bundle": "^4.0",
+    "hslavich/oneloginsaml-bundle": "^2.10",
     "sensio/framework-extra-bundle": "^6.2",
     "symfony/console": "^5.4",
     "symfony/dotenv": "^5.4",
