--- a/elasticms-web/config/packages/framework.yaml
+++ b/elasticms-web/config/packages/framework.yaml
@@ -8,6 +8,9 @@ framework:
     session:
         handler_id: ~
         storage_factory_id: session.storage.factory.native
+        cookie_lifetime: 60
+        cookie_secure: 'auto'
+        cookie_samesite: 'lax'
 
     esi: true
     fragments: true
