--- a/elasticms-web/config/packages/security.yaml
+++ b/elasticms-web/config/packages/security.yaml
@@ -1,11 +1,33 @@
 security:
     enable_authenticator_manager: true
 
+    password_hashers:
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+
+    providers:
+        saml_provider:
+            saml:
+                user_class: 'App\Web\Security\User'
+                default_roles: [ 'ROLE_USER' ]
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            security: false
+        app:
+            pattern: ^/
+            saml:
+                # Match SAML attribute 'uid' with username.
+                # Uses getNameId() method by default.
+#                username_attribute: uid
+                # Use the attribute's friendlyName instead of the name
+                use_attribute_friendly_name: true
+                check_path: saml_acs
+                login_path: saml_login
+            logout:
+                path: saml_logout
 
     access_control:
+        - { path: ^/saml/login, roles: PUBLIC_ACCESS }
+        - { path: ^/saml/metadata, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: ROLE_USER }
