--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "endroid/qr-code-bundle": "^4.0",
     "giggsey/libphonenumber-for-php": "^8.12",
     "guzzlehttp/guzzle": "^6.3",
+    "hslavich/oneloginsaml-bundle": "^2.10",
     "kevinrob/guzzle-cache-middleware": "^4.0",
     "league/flysystem-memory": "^2.0",
     "league/flysystem-sftp-v3": "^2.0",
