fix: use managed aliases

--- a/demo/configs/elasticms-web/preview.env
+++ b/demo/configs/elasticms-web/preview.env
@@ -1,7 +1,6 @@
 ###> Apache ###
 SERVER_NAME='local.preview-ems-demo-web.localhost'
 SERVER_ALIASES='local.preview-*-web.localhost local.preview-*-web-nocache.localhost *.preview-ems-demo-web.localhost'
-ENVIRONMENT_ALIAS='${INSTANCE_ID}preview'
 PROTECTED_URL=/protected-baseurl/
 APACHE_CACHE_CONTROL='immutable, max-age=63072000, public'
 ###< Apache ###
@@ -30,7 +29,7 @@ EMSCH_BIND_LOCALE='false'
 EMSCH_BACKEND_URL='${EMS_BACKEND_URL}'
 EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
 EMSCH_ENV='preview'
-EMSCH_ENVS='{"preview":{"regex":"/.*/","alias":"${INSTANCE_ID}preview","request":{"_backend":"${EMS_ADMIN_URL}"},"backend":"${EMS_BACKEND_URL}"}}'
+EMSCH_ENVS='{"preview":{"regex":"/.*/","alias":"${INSTANCE_ID}ma_preview","request":{"_backend":"${EMS_ADMIN_URL}"},"backend":"${EMS_BACKEND_URL}"}}'
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 EMSCH_TEMPLATES='{"template": {"name": "name","code": "body"},"template_ems": {"name": "name","code": "body"}}'
 ###< EMSCH ###
