--- a/demo/configs/elasticms-web/zz-live.env
+++ b/demo/configs/elasticms-web/zz-live.env
@@ -1,7 +1,6 @@
 ###> Apache ###
 SERVER_NAME='local.live-ems-demo-web.localhost'
 SERVER_ALIASES='*'
-ENVIRONMENT_ALIAS='${INSTANCE_ID}live'
 PROTECTED_URL=/protected-baseurl/
 APACHE_CACHE_CONTROL='immutable, max-age=63072000, public'
 APACHE_X_FRAME_OPTIONS=SAMEORIGIN
@@ -43,7 +42,7 @@ EMSCH_BIND_LOCALE='false'
 EMSCH_BACKEND_URL='${EMS_BACKEND_URL}'
 EMSCH_TEMPLATE_ERROR='@EMSCH/template/error/error{code}.html.twig'
 EMSCH_ENV='live'
-EMSCH_ENVS='{"live":{"regex":"/.*/","alias":"${INSTANCE_ID}live"}}'
+EMSCH_ENVS='{"live":{"regex":"/.*/","alias":"${INSTANCE_ID}ma_live"}}'
 EMSCH_TEMPLATE_EMS_LINK='@EMSCH/template/ems/{type}.ems_link.twig'
 ###< EMSCH ###
 
