--- a/composer.json
+++ b/composer.json
@@ -170,7 +170,8 @@
       "EMS\\Helpers\\Tests\\": "EMS/helpers/tests/",
       "EMS\\SubmissionBundle\\Tests\\": "EMS/submission-bundle/tests/",
       "EMS\\Xliff\\Tests\\": "EMS/xliff/tests/",
-      "EMS\\Release\\": "release/"
+      "EMS\\Release\\": "release/",
+      "EMS\\OneLoginBundle\\": "poc/one-login-bundle/src"
     }
   },
   "replace": {
