--- a/elasticms-web/config/packages/security.yaml
+++ b/elasticms-web/config/packages/security.yaml
@@ -2,29 +2,53 @@ security:
     enable_authenticator_manager: true
 
     providers:
-        saml_provider:
-            saml:
-                user_class: 'App\Web\Security\User'
-                default_roles: [ 'ROLE_USER' ]
+        one_login:
+            id: emsch.security.provider.one_login
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        app:
-            pattern: ^/
-            saml:
-                # Match SAML attribute 'uid' with username.
-                # Uses getNameId() method by default.
-#                username_attribute: uid
-                # Use the attribute's friendlyName instead of the name
-                use_attribute_friendly_name: true
-                check_path: saml_acs
-                login_path: saml_login
+        main:
+            request_matcher: emsch.security.request_matcher
+            custom_authenticators:
+                - emsch.security.authenticator.one_login
             logout:
-                path: saml_logout
+                path: emsch_security_saml_logout
+
 
     access_control:
-        - { path: ^/saml/login, roles: PUBLIC_ACCESS }
-        - { path: ^/saml/metadata, roles: PUBLIC_ACCESS }
-        - { path: ^/, roles: ROLE_USER }
+#        - { path: ^/saml/login, roles: PUBLIC_ACCESS }
+#        - { path: ^/saml/metadata, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: PUBLIC_ACCESS }
+
+#security:
+#    enable_authenticator_manager: true
+#
+#    providers:
+#        saml_provider:
+#            saml:
+#                user_class: 'App\Web\Security\User'
+#                default_roles: [ 'ROLE_USER' ]
+#
+#    firewalls:
+#        dev:
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
+#        app:
+#            pattern: ^/
+#            saml:
+#                # Match SAML attribute 'uid' with username.
+#                # Uses getNameId() method by default.
+##                username_attribute: uid
+#                # Use the attribute's friendlyName instead of the name
+#                use_attribute_friendly_name: true
+#                check_path: saml_acs
+#                login_path: saml_login
+#            logout:
+#                path: saml_logout
+#
+#    access_control:
+#        - { path: ^/saml/login, roles: PUBLIC_ACCESS }
+#        - { path: ^/saml/metadata, roles: PUBLIC_ACCESS }
+#        - { path: ^/, roles: ROLE_USER }
