--- a/elasticms-web/config/routes.yaml
+++ b/elasticms-web/config/routes.yaml
@@ -15,3 +15,6 @@ asset:
 ems_common:
   resource: 'ems_common.route.loader::load'
   type: service
+
+onelogin:
+  resource: '@EMSOneLoginBundle/Resources/config/routing/saml.xml'
