--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -16,6 +16,7 @@
 		"php": "^8.1",
 		"composer/ca-bundle": "^1.1",
 		"elasticms/common-bundle": "~5.5.0",
+		"onelogin/php-saml": "^4.1",
 		"symfony-cmf/routing": "^2.3",
 		"symfony/asset": "^5.4",
 		"symfony/console": "^5.4",
