--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
     "league/flysystem-memory": "^2.0",
     "league/flysystem-sftp-v3": "^2.0",
     "ocramius/doctrine-batch-utils": "^2.5",
+    "onelogin/php-saml": "^4.1",
     "phpoffice/phpspreadsheet": "^1.16",
     "promphp/prometheus_client_php": "^2.6",
     "psr/simple-cache": "^2.0",
