feat: add new AuthenticatedListener
If a route has `_authenticated` set to true, the AuthenticatedListener will throw an AccessDeniedException if the user is not fully authenticated.

````yaml
secure:
    config:
        path: '/secure'
        defaults: { _authenticated: true }
```

--- a/EMS/form-bundle/tests/Integration/App/config/config.yml
+++ b/EMS/form-bundle/tests/Integration/App/config/config.yml
@@ -14,6 +14,11 @@ framework:
     utf8: true
     strict_requirements: ~
 
+security:
+  firewalls:
+    main:
+      security: false
+
 doctrine:
   dbal:
     url: 'sqlite:///%kernel.project_dir%/tmp/test.db'
