--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -22,6 +22,7 @@
 		"symfony/console": "^5.4",
 		"symfony/event-dispatcher": "^5.4",
 		"symfony/mime": "^5.4",
+		"symfony/security": "^5.4",
 		"symfony/security-csrf": "^5.4",
 		"symfony/twig-bundle": "^5.4",
 		"symfony/yaml": "^5.4"
