--- a/EMS/client-helper-bundle/tests/Integration/App/config/config.yml
+++ b/EMS/client-helper-bundle/tests/Integration/App/config/config.yml
@@ -14,6 +14,11 @@ framework:
     utf8: true
     strict_requirements: ~
 
+security:
+  firewalls:
+    main:
+      security: false
+
 doctrine:
   dbal:
     url: 'sqlite:///%kernel.project_dir%/test.db'
@@ -34,6 +39,9 @@ ems_client_helper:
     test:
       api: { "enable": true, "name": "backend" }
       hosts: '["http://localhost:9200"]'
+  security:
+    saml:
+      enabled: false
 
 services:
   _defaults:
