--- a/EMS/client-helper-bundle/composer.json
+++ b/EMS/client-helper-bundle/composer.json
@@ -16,11 +16,13 @@
 		"php": "^8.1",
 		"composer/ca-bundle": "^1.1",
 		"elasticms/common-bundle": "~5.5.0",
+		"onelogin/php-saml": "^4.1",
 		"symfony-cmf/routing": "^2.3",
 		"symfony/asset": "^5.4",
 		"symfony/console": "^5.4",
 		"symfony/event-dispatcher": "^5.4",
 		"symfony/mime": "^5.4",
+		"symfony/security": "^5.4",
 		"symfony/security-csrf": "^5.4",
 		"symfony/twig-bundle": "^5.4",
 		"symfony/yaml": "^5.4"
