--- a/elasticms-admin/composer.json
+++ b/elasticms-admin/composer.json
@@ -11,7 +11,7 @@
   ],
   "minimum-stability": "stable",
   "prefer-stable": true,
-  "require": {T
+  "require": {
     "php": "^8.1",
     "ext-ctype": "*",
     "ext-gd": "*",
