fix: *.localhost no more internally available

--- a/demo/configs/elasticms-admin/ems-demo-dev.env
+++ b/demo/configs/elasticms-admin/ems-demo-dev.env
@@ -1,6 +1,6 @@
 ###> Apache ###
 SERVER_NAME=local.ems-demo-admin-dev.localhost
-SERVER_ALIASES='local.ems-demo-admin-dev.localhost'
+SERVER_ALIASES='local.ems-demo-admin-dev'
 ALIAS='/ems'
 JOBS_ENABLED=true
 ###< Apache ###
