--- a/demo/configs/elasticms-admin/ems-demo.env
+++ b/demo/configs/elasticms-admin/ems-demo.env
@@ -1,6 +1,6 @@
 ###> Apache ###
 SERVER_NAME=local.ems-demo-admin.localhost
-SERVER_ALIASES='local.ems-demo-admin.localhost admin-local'
+SERVER_ALIASES='local.ems-demo-admin admin-local'
 ALIAS='/ems'
 JOBS_ENABLED=true
 ###< Apache ###
