--- a/demo/.env
+++ b/demo/.env
@@ -1,9 +1,9 @@
 # Project namespace (defaults to the current folder name if not set)
 COMPOSE_PROJECT_NAME=elasticms_demo
 
-EMS_VERSION=5.5
+EMS_VERSION=5.6
 INSTANCE_ID='ems_promo_v2_'
-EMS_BACKEND_URL=http://local.ems-demo-admin.localhost:9000
+EMS_BACKEND_URL=http://local.ems-demo-admin:9000
 EMS_ADMIN_URL=http://local.ems-demo-admin.localhost
 
 DB_USER=postgres
