feat: upload generated assets (dont version a zip file in GitHub)

--- a/demo/docker-elasticms.yml
+++ b/demo/docker-elasticms.yml
@@ -76,6 +76,7 @@ services:
       - ./configs/document:/opt/src/document
       - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_preview
       - ./skeleton:/opt/src/local/${INSTANCE_ID}ma_live
+      - ./skeleton:/opt/src/local/skeleton
 #      - ../EMS/client-helper-bundle:/opt/src/vendor/elasticms/client-helper-bundle
 #      - ../EMS/common-bundle:/opt/src/vendor/elasticms/common-bundle
 #      - ../EMS/form-bundle:/opt/src/vendor/elasticms/form-bundle
