--- a/demo/configs/elasticms-admin/ems-demo-dev.env
+++ b/demo/configs/elasticms-admin/ems-demo-dev.env
@@ -50,6 +50,7 @@ EMSCO_DATE_TIME_FORMAT='j/m/Y \a\t G:i'
 EMSCO_DATEPICKER_FORMAT='dd/mm/yyyy'
 EMSCO_DATEPICKER_WEEKSTART='1'
 EMSCO_DATEPICKER_DAYSOFWEEK_HIGHLIGHTED='[0,6]'
+EMSCO_ASSET_CONFIG='{"preview":{"_config_type": "image","_quality": 90,"_height": 300,"_width": 490,"_resize": "fill","_gravity": "center", "_radius": null}}'
 ###< Core ###
 
 ###> EMSCH ###
