feat: EMS_EXCLUDED_CONTENT_TYPES environment variables

--- a/elasticms-cli/.env
+++ b/elasticms-cli/.env
@@ -39,6 +39,7 @@ EMS_METRIC_ENABLED=false
 EMS_METRIC_HOST=''
 EMS_REDIS_HOST=localhost
 EMS_REDIS_PORT=6379
+EMS_EXCLUDED_CONTENT_TYPES='["route","template","template_ems","label"]'
 #EMS_BACKEND_API_VERIFY=true
 #EMS_HASH_ALGO='sha1'
 ###< EMSCommonBundle ###
